@@ -7,9 +7,7 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.MockedConstruction;
 import org.mockito.Mockito;
-import org.mockito.ArgumentCaptor; // Added import
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.io.ByteArrayInputStream;
@@ -18,7 +16,7 @@ import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Arrays; // Added import
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -53,26 +51,26 @@ class StaticAnalysisServiceTest {
 
     @Test
     void getAvailableAnalyzers_shouldReturnFilteredAnalyzers() {
-        ToolDescriptor analyzer1 = mock(ToolDescriptor.class);
+        var analyzer1 = mock(ToolDescriptor.class);
         lenient().when(analyzer1.getCategory()).thenReturn("static-analyzer");
         lenient().when(analyzer1.getToolName()).thenReturn("Analyzer1");
 
-        ToolDescriptor nonAnalyzer = mock(ToolDescriptor.class);
+        var nonAnalyzer = mock(ToolDescriptor.class);
         lenient().when(nonAnalyzer.getCategory()).thenReturn("formatter");
         lenient().when(nonAnalyzer.getToolName()).thenReturn("Formatter1");
 
-        ToolDescriptor analyzer2 = mock(ToolDescriptor.class);
+        var analyzer2 = mock(ToolDescriptor.class);
         lenient().when(analyzer2.getCategory()).thenReturn("STATIC-ANALYZER"); // Test case-insensitivity
         lenient().when(analyzer2.getToolName()).thenReturn("Analyzer2");
 
-        Map<String, ToolDescriptor> descriptors = Map.of(
+        var descriptors = Map.of(
                 "Analyzer1", analyzer1,
                 "Formatter1", nonAnalyzer,
                 "Analyzer2", analyzer2
         );
         lenient().when(toolManager.getToolDescriptors()).thenReturn(descriptors); // toolManager is @Mock
 
-        List<ToolDescriptor> result = staticAnalysisService.getAvailableAnalyzers();
+        var result = staticAnalysisService.getAvailableAnalyzers();
 
         assertEquals(2, result.size());
         assertTrue(result.stream().anyMatch(td -> td.getToolName().equals("Analyzer1")));
@@ -82,13 +80,13 @@ class StaticAnalysisServiceTest {
 
     @Test
     void runAnalysis_successfulSemgrepCase() throws Exception {
-        String toolName = "Semgrep";
-        String commandPattern = "semgrep scan --config {semgrepConfig} --json {targetPath}";
-        String parserClass = "dumb.jaider.staticanalysis.SemgrepResultsParser"; // Actual class for this test
+        var toolName = "Semgrep";
+        var commandPattern = "semgrep scan --config {semgrepConfig} --json {targetPath}";
+        var parserClass = "dumb.jaider.staticanalysis.SemgrepResultsParser"; // Actual class for this test
         Map<String, Object> defaultConfig = Map.of("semgrepConfig", "auto");
-        String sampleOutput = "{\"results\": []}"; // Minimal valid Semgrep JSON
+        var sampleOutput = "{\"results\": []}"; // Minimal valid Semgrep JSON
 
-        ToolDescriptor localToolDescriptor = mock(ToolDescriptor.class); // Local mock
+        var localToolDescriptor = mock(ToolDescriptor.class); // Local mock
         when(toolManager.getToolDescriptor(toolName)).thenReturn(localToolDescriptor);
         when(localToolDescriptor.getCategory()).thenReturn("static-analyzer");
         when(toolManager.provisionTool(toolName)).thenReturn(true);
@@ -97,10 +95,10 @@ class StaticAnalysisServiceTest {
         when(localToolDescriptor.getResultsParserClass()).thenReturn(parserClass);
 
         // Mock ProcessBuilder and Process
-        try (MockedConstruction<ProcessBuilder> mockedPbConstruction = Mockito.mockConstruction(
+        try (var mockedPbConstruction = Mockito.mockConstruction(
                 ProcessBuilder.class,
                 (mock, context) -> {
-                    Object rawCommandArg = context.arguments().get(0);
+                    var rawCommandArg = context.arguments().getFirst();
                     List<String> actualCommand;
                     if (rawCommandArg instanceof List) {
                         actualCommand = (List<String>) rawCommandArg;
@@ -111,7 +109,7 @@ class StaticAnalysisServiceTest {
                         return;
                     }
                     // Expected command for this test
-                    List<String> expectedCommand = List.of("semgrep", "scan", "--config", "auto", "--json", targetPath.toAbsolutePath().toString());
+                    var expectedCommand = List.of("semgrep", "scan", "--config", "auto", "--json", targetPath.toAbsolutePath().toString());
                     assertEquals(expectedCommand, actualCommand, "ProcessBuilder command mismatch");
 
                     when(mock.directory(any(File.class))).thenReturn(mock); // Chain call
@@ -123,7 +121,7 @@ class StaticAnalysisServiceTest {
             when(process.waitFor()).thenReturn(0);
 
             List<StaticAnalysisIssue> expectedIssues = Collections.emptyList();
-            List<StaticAnalysisIssue> actualIssues = staticAnalysisService.runAnalysis(toolName, targetPath, Collections.emptyMap());
+            var actualIssues = staticAnalysisService.runAnalysis(toolName, targetPath, Collections.emptyMap());
             assertEquals(expectedIssues, actualIssues);
 
             // Verification of command is now done inside the mockConstruction context
@@ -134,14 +132,14 @@ class StaticAnalysisServiceTest {
 
     @Test
     void runAnalysis_successfulSemgrepCaseWithRuntimeOption() throws Exception {
-        String toolName = "Semgrep";
-        String commandPattern = "semgrep scan --config {semgrepConfig} --json {targetPath}";
-        String parserClass = "dumb.jaider.staticanalysis.SemgrepResultsParser";
+        var toolName = "Semgrep";
+        var commandPattern = "semgrep scan --config {semgrepConfig} --json {targetPath}";
+        var parserClass = "dumb.jaider.staticanalysis.SemgrepResultsParser";
         Map<String, Object> defaultConfig = Map.of("semgrepConfig", "auto");
-        String sampleOutput = "{\"results\": []}";
-        Map<String, String> runtimeOptions = Map.of("semgrepConfig", "custom_rules");
+        var sampleOutput = "{\"results\": []}";
+        var runtimeOptions = Map.of("semgrepConfig", "custom_rules");
 
-        ToolDescriptor localToolDescriptor = mock(ToolDescriptor.class); // Local mock
+        var localToolDescriptor = mock(ToolDescriptor.class); // Local mock
         when(toolManager.getToolDescriptor(toolName)).thenReturn(localToolDescriptor);
         when(localToolDescriptor.getCategory()).thenReturn("static-analyzer");
         when(toolManager.provisionTool(toolName)).thenReturn(true);
@@ -150,10 +148,10 @@ class StaticAnalysisServiceTest {
         when(localToolDescriptor.getResultsParserClass()).thenReturn(parserClass);
 
 
-        try (MockedConstruction<ProcessBuilder> mockedPbConstruction = Mockito.mockConstruction(
+        try (var mockedPbConstruction = Mockito.mockConstruction(
                 ProcessBuilder.class,
                 (mock, context) -> {
-                    Object rawCommandArg = context.arguments().get(0);
+                    var rawCommandArg = context.arguments().getFirst();
                     List<String> actualCommand;
                     if (rawCommandArg instanceof List) {
                         actualCommand = (List<String>) rawCommandArg;
@@ -163,7 +161,7 @@ class StaticAnalysisServiceTest {
                         fail("Unexpected command argument type: " + rawCommandArg.getClass().getName());
                         return;
                     }
-                    List<String> expectedCommand = List.of("semgrep", "scan", "--config", "custom_rules", "--json", targetPath.toAbsolutePath().toString());
+                    var expectedCommand = List.of("semgrep", "scan", "--config", "custom_rules", "--json", targetPath.toAbsolutePath().toString());
                     assertEquals(expectedCommand, actualCommand, "ProcessBuilder command mismatch for runtime options");
 
                     when(mock.directory(any(File.class))).thenReturn(mock);
@@ -183,55 +181,55 @@ class StaticAnalysisServiceTest {
 
     @Test
     void runAnalysis_toolNotFound() {
-        String toolName = "UnknownTool";
+        var toolName = "UnknownTool";
         when(toolManager.getToolDescriptor(toolName)).thenReturn(null); // This uses the class-level toolManager mock
 
-        IllegalArgumentException exception = assertThrows(IllegalArgumentException.class, () -> staticAnalysisService.runAnalysis(toolName, targetPath, Collections.emptyMap()));
+        var exception = assertThrows(IllegalArgumentException.class, () -> staticAnalysisService.runAnalysis(toolName, targetPath, Collections.emptyMap()));
         assertEquals("No descriptor found for tool: " + toolName, exception.getMessage());
     }
 
     @Test
     void runAnalysis_toolNotStaticAnalyzer() {
-        String toolName = "NotAnAnalyzer";
-        ToolDescriptor localToolDescriptor = mock(ToolDescriptor.class); // Local mock
+        var toolName = "NotAnAnalyzer";
+        var localToolDescriptor = mock(ToolDescriptor.class); // Local mock
         when(toolManager.getToolDescriptor(toolName)).thenReturn(localToolDescriptor);
         when(localToolDescriptor.getCategory()).thenReturn("formatter"); // Not a static-analyzer
 
-        IllegalArgumentException exception = assertThrows(IllegalArgumentException.class, () -> staticAnalysisService.runAnalysis(toolName, targetPath, Collections.emptyMap()));
+        var exception = assertThrows(IllegalArgumentException.class, () -> staticAnalysisService.runAnalysis(toolName, targetPath, Collections.emptyMap()));
         assertEquals("Tool " + toolName + " is not categorized as a static-analyzer.", exception.getMessage());
     }
 
     @Test
     void runAnalysis_provisioningFails() {
-        String toolName = "Semgrep";
-        ToolDescriptor localToolDescriptor = mock(ToolDescriptor.class); // Local mock
+        var toolName = "Semgrep";
+        var localToolDescriptor = mock(ToolDescriptor.class); // Local mock
         when(toolManager.getToolDescriptor(toolName)).thenReturn(localToolDescriptor);
         when(localToolDescriptor.getCategory()).thenReturn("static-analyzer");
         when(toolManager.provisionTool(toolName)).thenReturn(false); // Provisioning fails
 
-        RuntimeException exception = assertThrows(RuntimeException.class, () -> staticAnalysisService.runAnalysis(toolName, targetPath, Collections.emptyMap()));
+        var exception = assertThrows(RuntimeException.class, () -> staticAnalysisService.runAnalysis(toolName, targetPath, Collections.emptyMap()));
         assertEquals("Tool " + toolName + " is not available or could not be installed.", exception.getMessage());
     }
 
     @Test
     void runAnalysis_commandPatternMissing() {
-        String toolName = "ToolWithNoCommand";
-        ToolDescriptor localToolDescriptor = mock(ToolDescriptor.class); // Local mock
+        var toolName = "ToolWithNoCommand";
+        var localToolDescriptor = mock(ToolDescriptor.class); // Local mock
         when(toolManager.getToolDescriptor(toolName)).thenReturn(localToolDescriptor);
         when(localToolDescriptor.getCategory()).thenReturn("static-analyzer");
         when(toolManager.provisionTool(toolName)).thenReturn(true);
         when(localToolDescriptor.getAnalysisCommandPattern()).thenReturn(null); // Command pattern is missing
 
-        IllegalStateException exception = assertThrows(IllegalStateException.class, () -> staticAnalysisService.runAnalysis(toolName, targetPath, Collections.emptyMap()));
+        var exception = assertThrows(IllegalStateException.class, () -> staticAnalysisService.runAnalysis(toolName, targetPath, Collections.emptyMap()));
         assertEquals("Analysis command pattern is not defined for tool: " + toolName, exception.getMessage());
     }
 
 
     @Test
     void runAnalysis_parserClassNotFound() throws InterruptedException {
-        String toolName = "Semgrep";
-        String invalidParserClass = "com.example.NonExistentParser";
-        ToolDescriptor localToolDescriptor = mock(ToolDescriptor.class); // Local mock
+        var toolName = "Semgrep";
+        var invalidParserClass = "com.example.NonExistentParser";
+        var localToolDescriptor = mock(ToolDescriptor.class); // Local mock
         when(toolManager.getToolDescriptor(toolName)).thenReturn(localToolDescriptor);
         when(localToolDescriptor.getCategory()).thenReturn("static-analyzer");
         when(toolManager.provisionTool(toolName)).thenReturn(true);
@@ -240,7 +238,7 @@ class StaticAnalysisServiceTest {
         when(localToolDescriptor.getDefaultConfig()).thenReturn(Collections.emptyMap());
 
 
-        try (MockedConstruction<ProcessBuilder> mockedPbConstruction = Mockito.mockConstruction(
+        try (var mockedPbConstruction = Mockito.mockConstruction(
                 ProcessBuilder.class,
                 (mock, context) -> {
                     when(mock.directory(any(File.class))).thenReturn(mock); // Chain call
@@ -250,7 +248,7 @@ class StaticAnalysisServiceTest {
             when(process.getErrorStream()).thenReturn(new ByteArrayInputStream("".getBytes(StandardCharsets.UTF_8)));
             when(process.waitFor()).thenReturn(0);
 
-            Exception exception = assertThrows(Exception.class, () -> staticAnalysisService.runAnalysis(toolName, targetPath, Collections.emptyMap()));
+            var exception = assertThrows(Exception.class, () -> staticAnalysisService.runAnalysis(toolName, targetPath, Collections.emptyMap()));
             assertTrue(exception.getMessage().contains("Error with results parser " + invalidParserClass));
             assertInstanceOf(ClassNotFoundException.class, exception.getCause());
         }
@@ -258,8 +256,8 @@ class StaticAnalysisServiceTest {
 
     @Test
     void runAnalysis_processExecutionError() {
-        String toolName = "Semgrep";
-        ToolDescriptor localToolDescriptor = mock(ToolDescriptor.class); // Local mock
+        var toolName = "Semgrep";
+        var localToolDescriptor = mock(ToolDescriptor.class); // Local mock
         when(toolManager.getToolDescriptor(toolName)).thenReturn(localToolDescriptor);
         lenient().when(localToolDescriptor.getCategory()).thenReturn("static-analyzer");
         when(toolManager.provisionTool(toolName)).thenReturn(true);
@@ -268,7 +266,7 @@ class StaticAnalysisServiceTest {
         lenient().when(localToolDescriptor.getDefaultConfig()).thenReturn(Map.of("semgrepConfig", "auto"));
 
 
-        try (MockedConstruction<ProcessBuilder> mockedPbConstruction = Mockito.mockConstruction(
+        try (var mockedPbConstruction = Mockito.mockConstruction(
                 ProcessBuilder.class,
                 (mock, context) -> {
                     when(mock.directory(any(File.class))).thenReturn(mock);
@@ -285,11 +283,11 @@ class StaticAnalysisServiceTest {
 
     @Test
     void runAnalysis_noParserDefinedReturnsRawOutput() throws Exception {
-        String toolName = "RawTool";
-        String commandPattern = "rawtool {targetPath}";
-        String rawToolOutput = "This is some raw output from the tool.";
+        var toolName = "RawTool";
+        var commandPattern = "rawtool {targetPath}";
+        var rawToolOutput = "This is some raw output from the tool.";
 
-        ToolDescriptor localToolDescriptor = mock(ToolDescriptor.class); // Local mock
+        var localToolDescriptor = mock(ToolDescriptor.class); // Local mock
         when(toolManager.getToolDescriptor(toolName)).thenReturn(localToolDescriptor);
         when(localToolDescriptor.getCategory()).thenReturn("static-analyzer");
         when(toolManager.provisionTool(toolName)).thenReturn(true);
@@ -298,7 +296,7 @@ class StaticAnalysisServiceTest {
         when(localToolDescriptor.getDefaultConfig()).thenReturn(Collections.emptyMap());
 
 
-        try (MockedConstruction<ProcessBuilder> mockedPbConstruction = Mockito.mockConstruction(
+        try (var mockedPbConstruction = Mockito.mockConstruction(
                 ProcessBuilder.class,
                 (mock, context) -> {
                     when(mock.directory(any(File.class))).thenReturn(mock);
@@ -309,10 +307,10 @@ class StaticAnalysisServiceTest {
             when(process.getErrorStream()).thenReturn(new ByteArrayInputStream("".getBytes(StandardCharsets.UTF_8)));
             when(process.waitFor()).thenReturn(0);
 
-            List<StaticAnalysisIssue> issues = staticAnalysisService.runAnalysis(toolName, targetPath, Collections.emptyMap());
+            var issues = staticAnalysisService.runAnalysis(toolName, targetPath, Collections.emptyMap());
 
             assertEquals(1, issues.size());
-            StaticAnalysisIssue issue = issues.getFirst();
+            var issue = issues.getFirst();
             assertEquals(targetPath.toString(), issue.filePath());
             assertEquals("RAW_OUTPUT", issue.ruleId());
             assertTrue(issue.message().contains(rawToolOutput));
